; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_stream_wake_up.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_stream_wake_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_stream = type { i32, i32, %struct.vlc_h2_conn* }
%struct.vlc_h2_conn = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @vlc_h2_stream_wake_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlc_h2_stream_wake_up(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.vlc_h2_stream*, align 8
  %4 = alloca %struct.vlc_h2_conn*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.vlc_h2_stream*
  store %struct.vlc_h2_stream* %6, %struct.vlc_h2_stream** %3, align 8
  %7 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %3, align 8
  %8 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %7, i32 0, i32 2
  %9 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %8, align 8
  store %struct.vlc_h2_conn* %9, %struct.vlc_h2_conn** %4, align 8
  %10 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %4, align 8
  %11 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %10, i32 0, i32 0
  %12 = call i32 @vlc_mutex_lock(i32* %11)
  %13 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %3, align 8
  %14 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %13, i32 0, i32 0
  store i32 1, i32* %14, align 8
  %15 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %3, align 8
  %16 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %15, i32 0, i32 1
  %17 = call i32 @vlc_cond_signal(i32* %16)
  %18 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %4, align 8
  %19 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %18, i32 0, i32 0
  %20 = call i32 @vlc_mutex_unlock(i32* %19)
  ret void
}

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @vlc_cond_signal(i32*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
